[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "protectionstnd"
version = "0.1.1"
authors = [
    {name = "Alejandro Martinez", email = "aegloszenit@protonmail.com"}
]
description = "Security Protections, from sql injection to country specific protections"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
url = "https://github.com/zenitaeglos/protectionstnd.git"
license = "MIT"

readme = "README.md"

[metadata]
name = "protectionstnd"
version = "0.1.1"
description = "Security Protections, from sql injection to country specific protections"
authors = [{name = "Alejandro Martinez", email = "aegloszenit@protonmail.com"}]
license = "MIT"

[tool.maturin]
features = ["pyo3/extension-module"]
